# fastapi-async-project

./: .env  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
src/: main.py
src/config/: db.py
src/models/: todo.py
src/schemas/: todo.py
src/services/: todo.py
